home_page.css
h1 {
    color:whitesmoke;
    text-shadow: 2px 2px 20px blueviolet;
    font-size: 3em;
    text-align: center;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
}
table {
    color:antiquewhite;
    width: 80%;
    margin: auto;
}
body {
    background-image: url("img/Plini-Impulse-Voices-Art.jpg");
}
.words {
    background-color: lightgrey;
    width: 300px;
    border: 15px solid green;
    padding: 50px;
    margin: auto;
    color:black;
    font-size:15px;
    text-align: center;
}
ul {
    list-style-type: none;
    margin:auto;
    padding-left: 0;
    float:left;
    position: fixed;
    overflow: hidden;
    top: 120px;
}
li a {
    display: inline-block;
    padding: 15px;
    color:black;
    background-color: lightcyan;
}
.audio {
    float: right;
    position:fixed;
}
.introofmetal {
    background-color: black;
}

